--- a/index.html
+++ b/index.html
@@ -1,1 +1,200 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Job Response Diagnostic</title>
+  <meta name="description" content="A 30-second diagnostic explaining why online job applications stall or fail, and what to do next." />
+  <meta name="robots" content="index,follow" />
+
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <!-- =========================
+       HERO
+  ========================== -->
+  <header class="hero">
+    <div class="container">
+      <h1>Applying for jobs online, but nothing happens next?</h1>
+      <p class="subhead">
+        If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
+        It’s a breakdown in how the system reads you.
+      </p>
+
+      <a href="#diagnostic" class="primary-cta">
+        Run the 30-second diagnostic →
+      </a>
+    </div>
+  </header>
+
+  <!-- =========================
+       CONTEXT
+  ========================== -->
+  <section class="context">
+    <div class="container">
+      <p>
+        Online job systems are designed to reduce risk, not identify potential.
+        When applicant volume increases, many qualified candidates are filtered out or stalled
+        for reasons unrelated to capability.
+      </p>
+      <p>
+        This diagnostic identifies where that breakdown is happening,
+        so you can make the correct next move instead of guessing.
+      </p>
+    </div>
+  </section>
+
+  <!-- =========================
+       DIAGNOSTIC
+  ========================== -->
+  <section id="diagnostic" class="diagnostic">
+    <div class="container">
+      <div class="card">
+
+        <header class="card-header">
+          <h2>Job Application Response Diagnostic</h2>
+          <p class="meta">30 seconds · no email · immediate result</p>
+        </header>
+
+        <form id="diagnosticForm">
+
+          <fieldset>
+            <legend>
+              After you apply for jobs online, what usually happens next?
+            </legend>
+
+            <label>
+              <input type="radio" name="result" value="filtering-failure" />
+              I never hear anything back
+            </label>
+
+            <label>
+              <input type="radio" name="result" value="premature-disqualification" />
+              I get rejected very quickly, often automatically
+            </label>
+
+            <label>
+              <input type="radio" name="result" value="interview-drift" />
+              I sometimes get interviews, but they stall or end early
+            </label>
+
+            <label>
+              <input type="radio" name="result" value="conversion-breakdown" />
+              Recruiters reach out, but nothing turns into an offer
+            </label>
+
+            <label>
+              <input type="radio" name="result" value="search-exhaustion" />
+              I’ve mostly stopped applying because it feels pointless
+            </label>
+
+          </fieldset>
+
+          <button type="submit" class="primary-cta">
+            See my result →
+          </button>
+
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- =========================
+       RESULT (DYNAMIC)
+  ========================== -->
+  <section id="result" class="result hidden">
+    <div class="container">
+      <div class="card">
+
+        <p class="result-label">Result</p>
+        <h2 id="resultTitle">Filtering Failure</h2>
+
+        <div id="resultContent">
+          <!-- Free result copy will be injected here -->
+        </div>
+
+        <!-- =========================
+             PAID PIVOT
+        ========================== -->
+        <div class="paid-pivot">
+          <p>
+            Most people respond to this situation by changing effort instead of correcting the failure point.
+            Two common responses make this worse.
+          </p>
+
+          <a href="#" class="primary-cta">
+            Get the correct next move ($25)
+          </a>
+
+          <p class="microcopy">
+            One-time purchase · 10-minute read · no ongoing commitment
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- =========================
+       WHAT YOU GET
+  ========================== -->
+  <section class="what-you-get">
+    <div class="container">
+      <h3>What this includes</h3>
+      <ul>
+        <li>A clear explanation of your specific failure mode</li>
+        <li>One action to stop immediately</li>
+        <li>One action that changes outcomes</li>
+        <li>What to ignore for the next 30 days</li>
+        <li>A concrete signal to know if it’s working</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- =========================
+       AUDIT ESCALATION
+  ========================== -->
+  <section class="audit">
+    <div class="container">
+      <h3>Want certainty instead of another strategy?</h3>
+      <p>
+        If you want a clear explanation of why your applications are failing
+        and exactly what to change, you can request a one-time Application Visibility Audit.
+      </p>
+
+      <ul>
+        <li>One-time review</li>
+        <li>Written findings</li>
+        <li>No calls</li>
+        <li>Delivered in 3 business days</li>
+      </ul>
+
+      <a href="#" class="secondary-cta">
+        Request audit ($99)
+      </a>
+    </div>
+  </section>
+
+  <!-- =========================
+       FOOTER
+  ========================== -->
+  <footer class="footer">
+    <div class="container">
+      <p>
+        This diagnostic is not affiliated with any employer, job board, or recruiting platform.
+      </p>
+
+      <nav>
+        <a href="#">Privacy</a>
+        <a href="#">Contact</a>
+        <a href="#">About</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
