--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="https://rainer78.github.io/jobresponsediagnostic/script.js"></script>
 </body>
 </html>
 
