--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="A 30-second diagnostic explaining why online job applications stall or fail, and what to do next." />
   <meta name="robots" content="index,follow" />
 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
@@ -194,7 +194,8 @@
     </div>
   </footer>
 
-  <script src="https://rainer78.github.io/jobresponsediagnostic/script.js"></script>
+  <script src="./script.js"></script>
+
 </body>
 </html>
 
