--- a/paid/index.html
+++ b/paid/index.html
@@ -1,1 +1,38 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Decision Brief</title>
+  <meta name="robots" content="noindex,nofollow" />
+  <meta name="description" content="Private Decision Brief." />
+
+  <link rel="stylesheet" href="./paid.css" />
+</head>
+
+<body>
+  <main class="wrap" id="app" aria-live="polite">
+    <header class="header">
+      <p class="kicker" id="kicker">Decision Brief</p>
+      <h1 class="title" id="pageTitle">Loading…</h1>
+      <p class="sub" id="pageSub"></p>
+      <p class="note" id="pageNote"></p>
+    </header>
+
+    <section class="card" id="summaryCard" hidden>
+      <p class="summaryLine" id="summaryLine"></p>
+      <p class="summaryLine" id="objectiveLine"></p>
+    </section>
+
+    <div id="content"></div>
+
+    <footer class="footer">
+      <p id="footerNote">This page is intended for the purchaser’s personal use. Please do not share publicly.</p>
+    </footer>
+  </main>
+
+  <script src="./paid.js"></script>
+</body>
+</html>
 
