--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             Two common responses make this worse.
           </p>
 
-          <a href="#" class="primary-cta">
+          <a href="https://buy.stripe.com/4gMbJ2b3F6e34541zU9oc00" class="primary-cta">
             Get the correct next move ($25)
           </a>
 
