--- a/index.html
+++ b/index.html
@@ -124,13 +124,10 @@
             Two common responses make this worse.
           </p>
 
-          <a href="https://buy.stripe.com/4gMbJ2b3F6e34541zU9oc00" class="primary-cta">
-            Get the correct next move ($25)
-          </a>
+          <a href="#" class="primary-cta" id="nextMoveCta">Get the correct next move </a>
 
-          <p class="microcopy">
-            One-time purchase · 10-minute read · no ongoing commitment
-          </p>
+
+          <p class="microcopy">One-time purchase · 10-minute read · no ongoing commitment</p>
         </div>
 
       </div>
