--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             Two common responses make this worse.
           </p>
 
-          <a href="#" class="primary-cta" id="nextMoveCta">Get the correct next move </a>
+         <a href="#" class="primary-cta is-disabled" id="nextMoveCta" aria-disabled="true">Get the correct next move </a>
+
 
 
           <p class="microcopy">One-time purchase · 10-minute read · no ongoing commitment</p>
