--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Job Response Diagnostic</title>
+  <title>Apply for Jobs but Get No Response? Find Why Applications Are Rejected
+Job Response Diagnostic</title>
   <meta name="description" content="A 30-second diagnostic explaining why online job applications stall or fail, and what to do next." />
   <meta name="robots" content="index,follow" />
 
@@ -17,7 +18,7 @@
   ========================== -->
   <header class="hero">
     <div class="container">
-      <h1>Applying for jobs online, but nothing happens next?</h1>
+      <h1>Applying for Jobs but Getting No Response?</h1>
       <p class="subhead">
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
         It’s a breakdown in how the system reads you.
@@ -35,16 +36,28 @@
   <section class="context">
     <div class="container">
       <p>
-        Online job systems are designed to reduce risk, not identify potential.
-        When applicant volume increases, many qualified candidates are filtered out or stalled
-        for reasons unrelated to capability.
+        If you apply for jobs and keep getting rejected or hear nothing back, the problem is usually not your effort. Most job applications fail silently because they break down at a specific stage: automated filtering, premature disqualification, interview drift, or post-interview conversion failure. 
       </p>
       <p>
-        This diagnostic identifies where that breakdown is happening,
-        so you can make the correct next move instead of guessing.
+        This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
       </p>
     </div>
   </section>
+
+  <section class="context">
+  <div class="container">
+    <p>
+      If you apply for jobs but get no response, you are not alone. Many candidates find themselves applying for jobs but no response comes back, even after dozens of applications. Being active, qualified, and consistent does not guarantee results if your applications are failing at the wrong stage.
+    </p>
+    <p>
+      When someone has applied for jobs but no response or is applying for jobs but not getting interviews, the issue is usually not effort. Most job applications are rejected or ignored because they break down at a specific point in the hiring process, such as automated filtering, premature disqualification, interview drift, or post-interview conversion failure.
+    </p>
+    <p>
+      If you are asking, “why am I not getting job responses,” this diagnostic identifies which stage is blocking your applications and explains what to fix first so you can stop guessing and start seeing interview activity.
+    </p>
+  </div>
+</section>
+
 
   <!-- =========================
        DIAGNOSTIC
