--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Job Response Diagnostic</title>
       <h1>Applying for Jobs but Getting No Response?</h1>
       <p class="subhead">
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
-        It’s a breakdown in how the system reads you.
+        It’s a breakdown in how the system reads you. This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
       </p>
 
       <a href="#diagnostic" class="primary-cta">
@@ -33,18 +33,8 @@ Job Response Diagnostic</title>
   <!-- =========================
        CONTEXT
   ========================== -->
-  <section class="context">
-    <div class="container">
-      <p>
-        If you apply for jobs and keep getting rejected or hear nothing back, the problem is usually not your effort. Most job applications fail silently because they break down at a specific stage: automated filtering, premature disqualification, interview drift, or post-interview conversion failure. 
-      </p>
-      <p>
-        This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
-      </p>
-    </div>
-  </section>
-
-  <section class="context">
+  
+<section class="context">
   <div class="container">
     <p>
       If you apply for jobs but get no response, you are not alone. Many candidates find themselves applying for jobs but no response comes back, even after dozens of applications. Being active, qualified, and consistent does not guarantee results if your applications are failing at the wrong stage.
