--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Apply for Jobs but Get No Response? Find Why Applications Are Rejected
-Job Response Diagnostic</title>
+  <title>Apply for Jobs but Get No Response? Why Applications Are Rejected | Job Response Diagnostic</title>
   <meta name="description" content="A 30-second diagnostic explaining why online job applications stall or fail, and what to do next." />
   <meta name="robots" content="index,follow" />
 
@@ -21,7 +20,7 @@ Job Response Diagnostic</title>
       <h1>Applying for Jobs but Getting No Response?</h1>
       <p class="subhead">
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
-        It’s a breakdown in how the system reads you. This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
+        It’s a breakdown in how the system reads you. <br> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
       </p>
 
       <a href="#diagnostic" class="primary-cta">
@@ -177,6 +176,57 @@ Job Response Diagnostic</title>
       </a>
     </div>
   </section>
+
+  <!-- FAQ Schema (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Why do job applications get no response?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Many job applications fail silently because they are filtered out before a human review, screened out during initial evaluation, or lose momentum due to unclear positioning and misalignment. The most reliable way forward is to identify where the breakdown is occurring so you can fix the right thing first."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why am I qualified but not getting interviews?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Being qualified does not guarantee interviews if your application is being filtered automatically, if your positioning does not clearly match the role, or if recruiters make early disqualification decisions based on incomplete signals. Identifying the specific failure point determines the appropriate fix."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Are job applications rejected automatically?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Some applications are filtered by automated screening systems, especially when required criteria are not detected or when the application appears misaligned. However, many rejections also happen during fast human review. The key is distinguishing automated filtering from other failure points."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "I’ve applied to so many jobs but no response. What’s wrong?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "A long streak of no responses usually indicates a repeatable failure pattern rather than a lack of effort. Common causes include automated filtering, premature disqualification during screening, interview drift, or post-interview conversion breakdown. A diagnostic approach helps you find the pattern and fix it."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "No response after applying for jobs. What should I do next?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Your next step depends on where your applications are breaking down. If you are filtered early, you need clearer role alignment and stronger screening signals. If you reach interviews but stall, the problem is usually interview drift or follow-up conversion. Identify the failure stage first, then apply the right fix."
+      }
+    }
+  ]
+}
+</script>
+
 
   <!-- =========================
        FOOTER
