--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       <h1>Applying for Jobs but Getting No Response?</h1>
       <p class="subhead">
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
-        It’s a breakdown in how the system reads you. <br> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
-      </p>
+        It’s a breakdown in how the system reads you.</p> 
 
       <a href="#diagnostic" class="primary-cta">
         Run the 30-second diagnostic →
       </a>
+      <p> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
+      </p>
     </div>
   </header>
 
