--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <header class="hero">
     <div class="container">
       <h1>Applying for Jobs but Getting No Response?</h1>
-      <p class="subhead">
+      <h2 class="subhead">
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
-        It’s a breakdown in how the system reads you.</p> 
+        It’s a breakdown in how the system reads you.</h2> 
 
       <a href="#diagnostic" class="primary-cta">
         Run the 30-second diagnostic →
       </a>
-      <p> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
+      <p class="subhead"> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
       </p>
     </div>
   </header>
