--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         If you’re submitting applications and hearing nothing back, the issue is usually not your qualifications.
         It’s a breakdown in how the system reads you.</h2> 
 
-      <p class="subhead"> This diagnostic identifies which failure is blocking responses and tells you what to fix first, so you can start to see application results
+      <p class="subhead"> This diagnostic identifies why job applications get no response, shows which stage is blocking interviews, and explains what to fix first so you can start seeing application results.
       </p>
 
       <a href="#diagnostic" class="primary-cta">
