--- a/index.html
+++ b/index.html
@@ -201,47 +201,67 @@
     </div>
   </section>
 
-  <section class="faq">
+   <!-- =========================
+       FAQs
+  ========================== -->
+
+<section class="faq">
   <div class="container">
     <h2>Job Application Response Questions</h2>
 
-    <div class="faqItem">
+    <div class="faqItem" id="faq-no-response">
       <h3>Why do job applications get no response?</h3>
       <p>
         Most job applications fail silently because they break down at a specific stage of the hiring process. This can include automated filtering, fast human screening, premature disqualification, or loss of momentum after initial review. When this happens, applications are rejected or ignored without feedback.
       </p>
+      <p class="backLink">
+        <a href="#diagnostic-result">Back to your result ↑</a>
+      </p>
     </div>
 
-    <div class="faqItem">
+    <div class="faqItem" id="faq-qualified-no-interviews">
       <h3>Why am I qualified but not getting interviews?</h3>
       <p>
         Being qualified does not prevent rejection if your application is filtered automatically or positioned in a way that does not clearly signal relevance. Many qualified candidates are screened out early due to unclear alignment rather than lack of experience.
       </p>
+      <p class="backLink">
+        <a href="#diagnostic-result">Back to your result ↑</a>
+      </p>
     </div>
 
-    <div class="faqItem">
+    <div class="faqItem" id="faq-automatic-rejection">
       <h3>Are job applications rejected automatically?</h3>
       <p>
         Some job applications are rejected automatically by screening systems when required criteria are not detected. Others are reviewed quickly by recruiters and filtered out based on early signals. Identifying which one is happening determines what needs to be fixed.
       </p>
+      <p class="backLink">
+        <a href="#diagnostic-result">Back to your result ↑</a>
+      </p>
     </div>
 
-    <div class="faqItem">
+    <div class="faqItem" id="faq-many-applications-no-response">
       <h3>I’ve applied to so many jobs but no response. What’s wrong?</h3>
       <p>
         A long pattern of no responses usually indicates a repeatable failure rather than a one-off issue. This often means the same breakdown is happening across applications, such as filtering, early disqualification, or interview drift.
       </p>
+      <p class="backLink">
+        <a href="#diagnostic-result">Back to your result ↑</a>
+      </p>
     </div>
 
-    <div class="faqItem">
+    <div class="faqItem" id="faq-what-next">
       <h3>No response after applying for jobs. What should I do next?</h3>
       <p>
         The next step depends on where your applications are failing. Fixing the wrong stage can waste time and create more confusion. A diagnostic approach helps identify the blocking stage so you can focus on the change that actually improves response.
+      </p>
+      <p class="backLink">
+        <a href="#diagnostic-result">Back to your result ↑</a>
       </p>
     </div>
 
   </div>
 </section>
+
 
 
 
