--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
   </div>
 </section>
 
+<!-- ADSENSE: between Context and Diagnostic -->
+<div class="container adBreak" aria-label="Advertisement">
+  <div class="adSlot adSlot--leaderboard" data-ad="context-to-diagnostic">
+    <strong>Ad slot</strong> Responsive leaderboard (top-of-content)
+  </div>
+</div>
 
   <!-- =========================
        DIAGNOSTIC
@@ -141,6 +147,14 @@
           <!-- Free result copy will be injected here -->
         </div>
 
+        <!-- ADSENSE: inside Result, between result content and paid pivot -->
+<div class="adBreak" aria-label="Advertisement">
+  <div class="adSlot adSlot--inline" data-ad="result-mid">
+    <strong>Ad slot</strong> 300×250 / responsive rectangle
+  </div>
+</div>
+
+
         <!-- =========================
              PAID PIVOT
         ========================== -->
@@ -176,6 +190,14 @@
       </ul>
     </div>
   </section>
+
+  <!-- ADSENSE: after What this includes -->
+<div class="container adBreak" aria-label="Advertisement">
+  <div class="adSlot adSlot--inline" data-ad="after-what-you-get">
+    <strong>Ad slot</strong> 300×250 / responsive rectangle
+  </div>
+</div>
+
 
   <!-- =========================
        AUDIT ESCALATION
@@ -261,6 +283,8 @@
 
   </div>
 </section>
+
+
 
 
 
